# mouse_speed_profiler

./: .gitignore  Cargo.toml  README.ja.md  README.md  config.toml  create_release_package.ps1
.github/workflows/: build.yaml  release.yaml
src/: main.rs
